Migrate IOUtils#toByteArray to use readAllBytes