@@ -20,6 +20,7 @@ package org.apache.solr.packagemanager;
 import static org.apache.solr.packagemanager.PackageUtils.getMapper;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.lang.invoke.MethodHandles;
 import java.net.URL;
@@ -35,7 +36,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.stream.Collectors;
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
@@ -129,7 +129,9 @@ public class RepositoryManager {
           true);
     }
 
-    addKey(IOUtils.toByteArray(new URL(uri + "/publickey.der").openStream()), repoName + ".der");
+    try (InputStream is = new URL(uri + "/publickey.der").openStream()) {
+      addKey(is.readAllBytes(), repoName + ".der");
+    }
   }
 
   public void addKey(byte[] key, String destinationKeyFilename) throws Exception {
